correct size overflow

--- a/src/app/details/page.css
+++ b/src/app/details/page.css
@@ -33,6 +33,9 @@
 
 #participeButton{
 	padding: 20px;
+}
+
+.buttonForm{
 	width: auto;
 }
 
